--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Project Adam</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+<link href="https://c...content-available-to-author-only...r.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
@@ -34,6 +34,7 @@
             {% if data %}
                 <p>{{ data.message }}</p>
             {% endif %}
+
             {% if plot_image %}
                 <img src="data:image/png;base64,{{ plot_image }}" alt="Plot Image 1">
             {% endif %}
@@ -41,6 +42,12 @@
             {% if plot_image2 %}
                 <img src="data:image/png;base64,{{ plot_image2 }}" alt="Plot Image 2">
             {% endif %}"
+
+            {% if plot_image %}
+            <div class="text-center">
+                <a class="btn btn-primary" href="/download_excel">Download Excel</a>
+            </div>
+            {% endif %}
         </div>
     </div>
 </body>
